2009-04-18  Allan McRae <allan@archlinux.org>
	* brasero-2.26.1-1
	* upstream update

2009-03-22  Jan de Groot <jgc@archlinux.org>
	* brasero-2.26.0-1
	* upstream update
	* Make dependencies versioned
	* Fix optdepends

2008-12-16  Allan McRae <allan@archlinux.org>
	* brasero-0.8.4-1
	* upstream update
	* add nautilus as makedepend to build nautilus plugin

2008-11-14  Allan McRae <allan@archlinux.org>
	* brasero-0.8.3-1
	* upstream update

2008-10-22  Allan McRae <allan@archlinux.org>
	* brasero-0.8.2-2
	* Rebuild for totem-plparser update